[gd_scene load_steps=6 format=2]

[ext_resource path="res://node/avatar/llenn/vox_llenn.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/fsm/fsm_player/fsm_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://node/avatar/avatar_control.gd" type="Script" id=8]

[sub_resource type="SphereShape" id=1]
radius = 0.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.1, 0.1, 0.1 )

[node name="llenn" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 0
script = ExtResource( 8 )
WALK_SPEED = 5.0
RUN_SPEED = 15.0
JUMP_POWER = 100.0

[node name="col_move" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="interact" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45, 0 )
input_ray_pickable = false
collision_layer = 0
collision_mask = 262144

[node name="col_interact" type="CollisionShape" parent="interact"]
shape = SubResource( 2 )

[node name="vox" parent="." instance=ExtResource( 1 )]

[node name="fsm_player" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="interact" to="." method="_on_interact_body_exited"]
